--- a/index.html
+++ b/index.html
@@ -8,7 +8,26 @@
 
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+    <header id="header">
+      Product 
+      <img src="./images/user-img.png" alt="Compaany logo" id="header-img" />
+      <nav id="nav-bar">
+        <a href="#video" class="nav-link">Video</a>
+        <a href="" class="nav-link"></a>
+        <a href="" class="nav-link"></a>
+        
+      </nav>
+    </header>
 
+    <video id="video" src="./videos/CHRISTINA SHUSHO ~ BEST GOSPEL SONGS _ Tanzania - African Gospel Music Swahili - YouTube.mkv"></video>
+   
+   <form id="form" action="https://www.freecodecamp.com/email-submit">
+     <input type="email" id="email" placeholder="Enter your email">
+     <button type="submit" id="submit">Submit</button>
+   </form>
+   
+   
+   
     <!--
 
     Hello Camper!
